separate actor api
