# src/api/internal/handlers/movies/movies_handler.go
@@ -7,25 +7,20 @@ import (
 
 	core_models "github.com/abuzaforfagun/dynamodb-movie-book/api/internal/models/core"
 	"github.com/abuzaforfagun/dynamodb-movie-book/api/internal/models/custom_errors"
-	db_model "github.com/abuzaforfagun/dynamodb-movie-book/api/internal/models/db"
 	request_model "github.com/abuzaforfagun/dynamodb-movie-book/api/internal/models/requests"
 	"github.com/abuzaforfagun/dynamodb-movie-book/api/internal/models/response_model"
-	"github.com/abuzaforfagun/dynamodb-movie-book/api/internal/repositories"
 	"github.com/abuzaforfagun/dynamodb-movie-book/api/internal/services"
 	"github.com/gin-gonic/gin"
 )
 
 type MoviesHandler struct {
-	movieService    services.MovieService
-	actorRepository repositories.ActorRepository
+	movieService services.MovieService
 }
 
 func New(
-	movieService services.MovieService,
-	actorRepository repositories.ActorRepository) *MoviesHandler {
+	movieService services.MovieService) *MoviesHandler {
 	return &MoviesHandler{
-		movieService:    movieService,
-		actorRepository: actorRepository,
+		movieService: movieService,
 	}
 }
 
@@ -156,52 +151,12 @@ func (h *MoviesHandler) AddMovie(c *gin.Context) {
 		}
 	}
 
-	actorIds := []string{}
-	actorRoleMap := map[string]string{}
-	for _, actor := range requestModel.Actors {
-		actorIds = append(actorIds, actor.ActorId)
-		roleName, err := actor.Role.ToString()
-		if err != nil {
-			err := &custom_errors.BadRequestError{
-				Message: "Please verify role id",
-			}
-			c.JSON(http.StatusBadRequest, err)
-			return
-		}
-		actorRoleMap[actor.ActorId] = roleName
+	movieId, err := h.movieService.Add(&requestModel)
+
+	if err, ok := err.(*custom_errors.BadRequestError); ok {
+		c.JSON(http.StatusBadRequest, err)
+		return
 	}
-	var actorsInfo *[]db_model.ActorInfo
-
-	if len(actorIds) != 0 {
-		actorsInfo, err = h.actorRepository.Get(actorIds)
-		if err != nil {
-			log.Printf("ERROR: Unable to get [Actors=%s]\nError: %v\n", actorsInfo, err)
-			c.JSON(http.StatusInternalServerError, gin.H{})
-			return
-		}
-
-		if len(*actorsInfo) != len(actorIds) {
-			err := &custom_errors.BadRequestError{
-				Message: "Please verify actor ids",
-			}
-			c.JSON(http.StatusBadRequest, err)
-			return
-		}
-	}
-
-	movieActors := []db_model.MovieActor{}
-
-	for _, actor := range *actorsInfo {
-		role := actorRoleMap[actor.Id]
-		movieActor := db_model.MovieActor{
-			ActorId: actor.Id,
-			Role:    role,
-			Name:    actor.Name,
-		}
-		movieActors = append(movieActors, movieActor)
-	}
-
-	movieId, err := h.movieService.Add(&requestModel, movieActors)
 
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{})
