# src/api/internal/routers/routers.go
@@ -1,7 +1,6 @@
 package routers
 
 import (
-	actors_handler "github.com/abuzaforfagun/dynamodb-movie-book/api/internal/handlers/actors"
 	movies_handler "github.com/abuzaforfagun/dynamodb-movie-book/api/internal/handlers/movies"
 	reviews_handler "github.com/abuzaforfagun/dynamodb-movie-book/api/internal/handlers/reviews"
 	"github.com/gin-gonic/gin"
@@ -19,10 +18,4 @@ func SetupMovies(router *gin.Engine, movieHandler *movies_handler.MoviesHandler)
 func SetupReviewes(router *gin.Engine, reviewHandler *reviews_handler.ReviewHandler) {
 	router.POST("/movies/:id/reviews", reviewHandler.AddReview)
 	router.DELETE("/movies:id/reviews:review_id", reviewHandler.DeleteReview)
-}
-
-func SetupActors(router *gin.Engine, actorHandler *actors_handler.ActorsHandler) {
-	router.POST("/actors", actorHandler.Add)
-	router.GET("/actors/:id", actorHandler.GetDetails)
-	router.POST("/actors/:id/photos", actorHandler.AddPictures)
 }
