# src/api/internal/services/movie_service.go
@@ -16,7 +16,7 @@ import (
 )
 
 type MovieService interface {
-	Add(movie *request_model.AddMovie, actors []db_model.MovieActor) (string, error)
+	Add(movie *request_model.AddMovie) (string, error)
 	GetAll(searchQuery string) (*[]response_model.Movie, error)
 	GetByGenre(genreName string) (*[]response_model.Movie, error)
 	UpdateMovieScore(movieId string) error
@@ -30,17 +30,20 @@ type movieService struct {
 	reviewService          ReviewService
 	rabbitMq               infrastructure.RabbitMQ
 	movieAddedExchangeName string
+	actorService           ActorService
 }
 
 func NewMovieService(movieRepository repositories.MovieRepository,
 	reviewService ReviewService,
 	rabbitMq infrastructure.RabbitMQ,
+	actorService ActorService,
 	movieAddedExchangeName string) MovieService {
 	return &movieService{
 		movieRepository:        movieRepository,
 		reviewService:          reviewService,
 		movieAddedExchangeName: movieAddedExchangeName,
 		rabbitMq:               rabbitMq,
+		actorService:           actorService,
 	}
 }
 
@@ -48,15 +51,54 @@ func (s *movieService) HasMovie(movieId string) (bool, error) {
 	return s.movieRepository.HasMovie(movieId)
 }
 
-func (s *movieService) Add(movie *request_model.AddMovie, actors []db_model.MovieActor) (string, error) {
+func (s *movieService) Add(movie *request_model.AddMovie) (string, error) {
+
+	actorIds := []string{}
+	actorRoleMap := map[string]string{}
+	for _, actor := range movie.Actors {
+		actorIds = append(actorIds, actor.ActorId)
+		roleName, err := actor.Role.ToString()
+		if err != nil {
+			err := &custom_errors.BadRequestError{
+				Message: "Please verify role id",
+			}
+			return "", err
+		}
+		actorRoleMap[actor.ActorId] = roleName
+	}
+
+	movieActors := []db_model.MovieActor{}
+	if len(actorIds) != 0 {
+		actorsInfo, err := s.actorService.GetActorsBasicInfo(actorIds)
+		if err != nil {
+			return "", err
+		}
+
+		if actorsInfo == nil {
+			return "", &custom_errors.BadRequestError{
+				Message: "Invalid actor(s) id",
+			}
+		}
+
+		for _, actor := range *actorsInfo {
+			role := actorRoleMap[actor.Id]
+			movieActor := db_model.MovieActor{
+				ActorId: actor.Id,
+				Role:    role,
+				Name:    actor.Name,
+			}
+			movieActors = append(movieActors, movieActor)
+		}
+	}
+
 	movieId := uuid.New().String()
-	dbModel, err := db_model.NewMovieModel(movieId, movie.Title, movie.ReleaseYear, movie.Genres, actors)
+	dbModel, err := db_model.NewMovieModel(movieId, movie.Title, movie.ReleaseYear, movie.Genres, movieActors)
 
 	if err != nil {
 		return "", err
 	}
 
-	err = s.movieRepository.Add(dbModel, actors)
+	err = s.movieRepository.Add(dbModel, movieActors)
 	if err != nil {
 		log.Printf("ERROR: unable save movie %v", err.Error())
 		return "", err
